<resources>
    <string-array name="language_array">
        <item>en</item>
        <item>es</item>
        <item>ru</item>
    </string-array>

    <string name="app_name">BannerManager</string>
    <string name="delete">delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_of_start">Date of start</string>
    <string name="date_of_end">Date of end</string>
    <string name="title_activity_add_document">AddDocumentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="link_for_button">Link for button</string>
    <string name="text_for_button">Text for button</string>
    <string name="is_site">Is site</string>
    <string name="link">Link</string>
    <string name="language">Language</string>

</resources>
